add last articles and edit keywords in rest of pages :sparkles:

--- a/AR/about_AR.html
+++ b/AR/about_AR.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عنا -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="keywords" content="معدات بيئية, حلول علمية, خدمات هندسية متكاملة, مراقبة الجودة, الاستدامة البيئية, تاريخ الشركة, الرسالة والرؤية, خبرة الفريق">
+    <meta name="description" content="اكتشف التزامنا بتوفير معدات بيئية عالية الجودة وخدمات هندسية متكاملة. فريقنا من الخبراء يكرس جهوده لضمان مراقبة الجودة وتعزيز الاستدامة في كل مشروع نقوم به.">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
