--- a/AR/cmEQ_AR.html
+++ b/AR/cmEQ_AR.html
@@ -114,8 +114,8 @@
             <a href="../index_AR.html" class="nav-item nav-link ">الرئيسية</a>
             <a href="../AR/about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="../AR/contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
-            <a href="../AR/service_AR.html" class="nav-item nav-link">التطبيقات</a>
-            <a href="../AR/partners_AR.html" class="nav-item nav-link active">الشركاء</a>
+            <a href="../AR/service_AR.html" class="nav-item nav-link active">التطبيقات</a>
+            <a href="../AR/partners_AR.html" class="nav-item nav-link ">الشركاء</a>
         </div>
         <a href="../AR/product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
@@ -142,7 +142,7 @@
         <div class="row g-5">
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                 <div class="d-flex flex-column">
-                    <img class="img-fluid rounded w-75 align-self-end" src="../img/Applications/repairs.jpg" alt="">
+                    <img class="img-fluid rounded w-75 align-self-end" src="../img/Applications/control.jpg" alt="">
                     <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="../img/about/about-2.jpg" alt="" style="margin-top: -25%;">
                 </div>
             </div>
