--- a/AR/contact_AR.html
+++ b/AR/contact_AR.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تواصل معنا -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="معلومات الاتصال, دعم العملاء, نموذج الاستفسار, خدمات بيئية, تواصل معنا, طلب عرض أسعار, ملاحظات">
+    <meta name="description" content="هل لديك أسئلة أو تحتاج إلى مساعدة؟ اتصل بنا اليوم! فريقنا المDedicated هنا لمساعدتك في احتياجاتك واستفساراتك المتعلقة بالمعدات البيئية. املأ نموذجنا أو تواصل مباشرة للحصول على دعم سريع.">
+  
     <script src="../js/contact.js" defer></script>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
