--- a/AR/partners_AR.html
+++ b/AR/partners_AR.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الشركاء -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="أجهزة قياس البيئة, محللات غازات المداخن, أجهزة مراقبة جودة الهواء, كاشفات الغازات, شركاء البيئة, معدات البيئة, أجهزة المراقبة, المعايرة, الصيانة, أدوات البيئة, كاسيلا, إي كوم, تطبيقات علمية, خدمات هندسية متكاملة">
+    <meta name="description" content="اكتشف شركاءنا وأجهزتهم المتقدمة لقياس البيئة. تعرف على محللات غازات المداخن، وأجهزة مراقبة جودة الهواء، وكاشفات الغازات والمزيد من الشركات الرائدة في الصناعة.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
