--- a/AR/service_AR.html
+++ b/AR/service_AR.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الخدمات -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="مكتب الندى العلمي، خدمات بيئية، خدمات علمية، خدمات المعايرة، توريد الأواني الزجاجية، توريد المواد الكيميائية، القياسات البيئية، معدات المختبرات، معدات المراقبة، مراقبة جودة الهواء، قياس الغبار، قياس الضوضاء، قياس الاهتزاز، أخذ العينات الجوية">
+    <meta name="description" content="اكتشف مجموعة واسعة من الخدمات البيئية والعلمية التي يقدمها مكتب الندى العلمي، بما في ذلك المعايرة، وتوريد الأواني الزجاجية، وتوريد المواد الكيميائية، والقياسات البيئية. استكشف مقالات مفصلة عن كل خدمة لمزيد من المعلومات.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
@@ -241,7 +241,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements_AR.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Training_AR.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('../img/Applications/training.jpg');background-size: cover;background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
@@ -259,7 +259,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements_AR.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Calibration_AR.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('../img/Applications/5.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
@@ -277,7 +277,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements_AR.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./GC_AR.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('../img/Applications/Laboratory-glassware.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
