--- a/EN/about.html
+++ b/EN/about.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="keywords" content="Environmental equipment, Scientific solutions, Integrated engineering services, Quality monitoring, Environmental sustainability, Company history, Mission and vision, Team expertise">
+    <meta name="description" content="Discover our commitment to providing top-notch environmental equipment and integrated engineering services. Our team of experts is dedicated to ensuring quality monitoring and promoting sustainability in every project we undertake.">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
