--- a/EN/contact.html
+++ b/EN/contact.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="Contact information, Customer support, Inquiry form, Environmental services, Get in touch, Request a quote, Feedback">
+    <meta name="description" content="Have questions or need assistance? Contact us today! Our dedicated team is here to help you with your environmental equipment needs and inquiries. Fill out our form or reach out directly for prompt support.">
+   
     <script src="../js/contact.js" defer></script>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
