--- a/EN/partners.html
+++ b/EN/partners.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partners - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="environmental measuring devices, flue gas analyzers, air quality monitors, gas detectors, environmental partners, environmental equipment, monitoring devices, calibration, maintenance, environmental instruments, Casella, Ecom, scientific applications, integrated engineering services">
+    <meta name="description" content="Explore our partners and their advanced environmental measuring devices. Learn about flue gas analyzers, air quality monitors, gas detectors, and more from leading companies in the industry.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
