--- a/EN/service.html
+++ b/EN/service.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applications - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="Al Nada Scientific Office, environmental services, scientific services, calibration services, glassware supply, chemical supply, environmental measurements, laboratory equipment, monitoring equipment, air quality monitoring, dust measurement, noise measurement, vibration measurement, air sampling">
+    <meta name="description" content="Discover a wide range of environmental and scientific services offered by Al Nada Scientific Office, including calibration, glassware supply, chemical supply, and environmental measurements. Explore detailed articles on each service for more information.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
@@ -252,7 +252,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Training.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('../img/Applications/training.jpg');background-size: cover;background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
@@ -270,7 +270,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Calibration.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('../img/Applications/5.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
@@ -288,7 +288,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./Measurements.html';" style="cursor: pointer;">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='./GC.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('../img/Applications/Laboratory-glassware.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
