--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="Al Nada Scientific Office, environmental solutions, scientific solutions, calibration services, glassware supply, chemical supply, environmental measurements, technical support, laboratory equipment, monitoring equipment">
+    <meta name="description" content="Al Nada Scientific Office, a leader in providing integrated environmental and scientific solutions. Discover our services in calibration, glassware supply, chemical supply, environmental measurements, and technical support.">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
