--- a/index_AR.html
+++ b/index_AR.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="مكتب الندى العلمي، حلول بيئية، حلول علمية، خدمات المعايرة، توريد الأواني الزجاجية، توريد المواد الكيميائية، القياسات البيئية، الدعم الفني، معدات المختبرات، معدات المراقبة">
+    <meta name="description" content="مكتب الندى العلمي، الرائد في تقديم الحلول البيئية والعلمية المتكاملة. اكتشف خدماتنا في المعايرة، وتوريد الأواني الزجاجية والمواد الكيميائية، والقياسات البيئية، والدعم الفني.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
