--- a/AR/Measurements_AR.html
+++ b/AR/Measurements_AR.html
@@ -114,8 +114,8 @@
             <a href="../index_AR.html" class="nav-item nav-link ">الرئيسية</a>
             <a href="../AR/about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="../AR/contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
-            <a href="../AR/service_AR.html" class="nav-item nav-link">التطبيقات</a>
-            <a href="../AR/partners_AR.html" class="nav-item nav-link active">الشركاء</a>
+            <a href="../AR/service_AR.html" class="nav-item nav-link  active">التطبيقات</a>
+            <a href="../AR/partners_AR.html" class="nav-item nav-link ">الشركاء</a>
         </div>
         <a href="../AR/product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
