--- a/EN/Measurements.html
+++ b/EN/Measurements.html
@@ -114,8 +114,8 @@
                 <a href="../index.html" class="nav-item nav-link ">Home</a>
                 <a href="../EN/about.html" class="nav-item nav-link">About Us</a>
                 <a href="../EN/contact.html" class="nav-item nav-link">Contact</a>
-                <a href="../EN/service.html" class="nav-item nav-link">Applications</a>
-                <a href="../EN/partners.html" class="nav-item nav-link active">Partners</a>
+                <a href="../EN/service.html" class="nav-item nav-link  active">Applications</a>
+                <a href="../EN/partners.html" class="nav-item nav-link ">Partners</a>
             </div>
             <a href="../EN/product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
